--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,7 @@
       </label>
       <div id="status">........</div>
     </div>
-    <script src="popup.js"></script>
+    <script src="popup.js" type="text/javascript"></script>
+    <script src="global.js" type="text/javascript"></script>
   </body>
 </html>
