--- a/popup/popup.html
+++ b/popup/popup.html
@@ -18,6 +18,6 @@
       <div id="status">........</div>
     </div>
     <script src="popup.js" type="text/javascript"></script>
-    <script src="global.js" type="text/javascript"></script>
+    <script src="../scripts/global.js" type="text/javascript"></script>
   </body>
 </html>
